--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
-    "styled-components": "^5.0.0-rc.2"
+    "styled-components": "^5.0.0-rc.2",
+    "typeface-poppins": "^0.0.72"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
