--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "styled-components": "^5.0.0-rc.2",
     "typeface-poppins": "^0.0.72"
