test: fix test placeholder

--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "cm": "git-cz",
     "cy:open": "cross-env CYPRESS_CRASH_REPORTS=0 cypress open",
     "cy:run": "cross-env CYPRESS_CRASH_REPORTS=0 cypress run",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
+    "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
+    "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "mockserver": "node server",
@@ -149,7 +150,7 @@
     "serve:storybook": "serve --no-clipboard --listen 9009 storybook-static",
     "start": "react-scripts start",
     "start:storybook": "start-storybook",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "test:coverage": "yarn test --coverage --watchAll=false",
     "test:e2e": "is-ci && yarn test:e2e:run || yarn test:e2e:dev",
     "test:e2e:dev": "start-server-and-test start http://localhost:3000 cy:open",
