--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 
 services:
   frontend:
@@ -6,6 +6,6 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        REACT_APP_API_BASE_URL: http://localhost:8080
+        REACT_APP_API_BASE_URL: $REACT_APP_API_BASE_URL
     ports:
       - 3000:3000
