--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/cypress": "^4.2.0",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.3",
+    "@testing-library/user-event": "^7.1.2",
     "commitizen": "^4.0.3",
     "cross-env": "^5.2.1",
     "cypress": "^3.4.1",
