build: workaround prettier bug

--- a/package.json
+++ b/package.json
@@ -140,12 +140,13 @@
     "cm": "git-cz",
     "cy:open": "cross-env CYPRESS_CRASH_REPORTS=0 cypress open",
     "cy:run": "cross-env CYPRESS_CRASH_REPORTS=0 cypress run",
-    "format": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
-    "format:fix": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
+    "format": "yarn prettier --check",
+    "format:fix": "yarn prettier --write",
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "mockserver": "node server",
     "pretest:e2e:run": "yarn build",
+    "prettier": "prettier --config package.json  \"{src,cypress}/**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
     "release": "standard-version",
     "serve": "serve --no-clipboard --single --listen 3000 build",
     "serve:storybook": "serve --no-clipboard --listen 9009 storybook-static",
