--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ stages:
   - package
 
 variables:
-  CYPRESS_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/Cypress'
-  YARN_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/yarn'
+  CYPRESS_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/Cypress"
+  YARN_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/yarn"
 
 .cache:
   cache:
@@ -21,6 +21,9 @@ install:
   image: node:10-alpine
   script:
     - yarn --frozen-lockfile --silent
+  only:
+    changes:
+      - yarn.lock
 
 validate:
   image: node:10-alpine
@@ -59,3 +62,24 @@ test:e2e:
       - cypress/screenshots
       - cypress/videos
     expire_in: 1 day
+
+.docker:
+  image: docker:stable
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+package:
+  stage: package
+  extends: .docker
+  variables:
+    CONTAINER_CURRENT_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+    CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+  script:
+    - docker build --pull -t $CONTAINER_CURRENT_IMAGE .
+    - docker tag $CONTAINER_CURRENT_IMAGE $CONTAINER_RELEASE_IMAGE
+    - docker push $CONTAINER_CURRENT_IMAGE
+    - docker push $CONTAINER_RELEASE_IMAGE
+  only:
+    - master
