feat: add truncate util

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@styled-system/css": "^5.0.23",
     "@styled-system/variant": "^5.1.2",
     "downshift": "^3.4.2",
+    "lodash-es": "^4.17.15",
     "polished": "^3.4.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -151,7 +152,7 @@
     "serve": "serve --no-clipboard --single --listen 3000 build",
     "serve:storybook": "serve --no-clipboard --listen 9009 storybook-static",
     "start": "react-scripts start",
-    "start:storybook": "start-storybook",
+    "start:storybook": "start-storybook -p 9009",
     "test": "react-scripts test --passWithNoTests",
     "test:coverage": "yarn test --coverage --watchAll=false",
     "test:e2e": "is-ci && yarn test:e2e:run || yarn test:e2e:dev",
