--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": ">=8",
     "prettier": "^1.18.2",
     "serve": "^11.2.0",
+    "source-map-explorer": "^2.1.2",
     "standard-version": "^7.0.0",
     "start-server-and-test": "^1.10.0"
   },
@@ -136,6 +137,7 @@
   },
   "proxy": "http://localhost:8080",
   "scripts": {
+    "analyze": "source-map-explorer \"build/static/js/*.js\"",
     "build": "react-scripts build",
     "build:storybook": "build-storybook",
     "cm": "git-cz",
@@ -146,6 +148,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src",
     "mockserver": "node server",
+    "preanalyze": "yarn build",
     "pretest:e2e:run": "yarn build",
     "prettier": "prettier --config package.json  \"{src,cypress}/**/*.{js,jsx,ts,tsx,css,json,md}\" --ignore-path .gitignore",
     "release": "standard-version",
