--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ stages:
   - package
 
 variables:
-  CYPRESS_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/Cypress"
-  YARN_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/yarn"
+  CYPRESS_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/Cypress'
+  YARN_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/yarn'
 
 .cache:
   cache:
@@ -67,6 +67,9 @@ test:e2e:
   image: docker:stable
   services:
     - docker:dind
+  variables:
+    CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+    DOCKER_TLS_CERTDIR: ''
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
@@ -74,11 +77,11 @@ package:
   stage: package
   extends: .docker
   variables:
-    CONTAINER_CURRENT_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-    CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+    CONTAINER_CURRENT_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
   script:
-    - docker build --pull -t $CONTAINER_CURRENT_IMAGE .
-    - docker tag $CONTAINER_CURRENT_IMAGE $CONTAINER_RELEASE_IMAGE
+    - docker pull $CONTAINER_RELEASE_IMAGE || true
+    - docker build --cache-from $CONTAINER_RELEASE_IMAGE --tag
+      $CONTAINER_CURRENT_IMAGE --tag $CONTAINER_RELEASE_IMAGE .
     - docker push $CONTAINER_CURRENT_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
   only:
