--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "downshift": "^3.4.2",
     "lodash-es": "^4.17.15",
     "polished": "^3.4.2",
+    "prism-react-renderer": "^1.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
