--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,22 +67,32 @@ test:e2e:
   image: docker:stable
   services:
     - docker:dind
+  tags:
+    - sshoc-backend
   variables:
-    CONTAINER_RELEASE_IMAGE: $CI_REGISTRY_IMAGE:latest
+    DOCKER_RELEASE_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:latest
     DOCKER_TLS_CERTDIR: ''
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker pull $DOCKER_RELEASE_IMAGE || true
+    - docker build --cache-from $DOCKER_RELEASE_IMAGE --tag
+      $DOCKER_CURRENT_IMAGE --tag $DOCKER_RELEASE_IMAGE .
+    - docker push $DOCKER_CURRENT_IMAGE
+    - docker push $DOCKER_RELEASE_IMAGE
 
-package:
+package:master:
   stage: package
   extends: .docker
   variables:
-    CONTAINER_CURRENT_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
-  script:
-    - docker pull $CONTAINER_RELEASE_IMAGE || true
-    - docker build --cache-from $CONTAINER_RELEASE_IMAGE --tag
-      $CONTAINER_CURRENT_IMAGE --tag $CONTAINER_RELEASE_IMAGE .
-    - docker push $CONTAINER_CURRENT_IMAGE
-    - docker push $CONTAINER_RELEASE_IMAGE
+    DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_SHORT_SHA
+  only:
+    - master
+
+package:tags:
+  stage: package
+  extends: .docker
+  variables:
+    DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_SHORT_SHA
   only:
     - master
