--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,6 +93,6 @@ package:tags:
   stage: package
   extends: .docker
   variables:
-    DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_SHORT_SHA
+    DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_TAG
   only:
-    - master
+    - tags
