--- a/docker-compose-acdh.yml
+++ b/docker-compose-acdh.yml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   frontend:
-    image: registry.gitlab.com/stefan.probst/ci-test/frontend:latest
+    image: docker.gitlab.gwdg.de/sshoc/sshoc-marketplace-frontend/frontend:latest
     container_name: sshoc-marketplace-frontend-frontend
     build:
       context: .
