--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@stefanprobst/menu-button": "^0.5.4-c",
     "@styled-system/css": "^5.0.23",
     "@styled-system/variant": "^5.1.2",
+    "detab": "^2.0.2",
     "downshift": "^3.4.2",
     "lodash-es": "^4.17.15",
     "polished": "^3.4.2",
@@ -24,7 +25,8 @@
     "strip-markdown": "^3.1.1",
     "styled-components": "^5.0.0-rc.2",
     "typeface-poppins": "^0.0.72",
-    "unified": "^8.4.2"
+    "unified": "^8.4.2",
+    "unist-builder": "^2.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
