--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,8 @@ stages:
   - package
 
 variables:
-  CYPRESS_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/Cypress"
-  YARN_CACHE_FOLDER: "${CI_PROJECT_DIR}/.cache/yarn"
+  CYPRESS_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/Cypress'
+  YARN_CACHE_FOLDER: '${CI_PROJECT_DIR}/.cache/yarn'
 
 .cache:
   cache:
@@ -70,7 +70,7 @@ test:e2e:
   tags:
     - sshoc-frontend
   variables:
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_TLS_CERTDIR: ''
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
@@ -113,7 +113,7 @@ package:frontend:tags:acdh:
     DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_TAG
     REACT_APP_API_BASE_URL: https://marketplace-api.sshopencloud.eu
   rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
+    - if: '$CI_COMMIT_TAG != null'
 
 package:storybook:main:acdh:
   stage: package
@@ -135,4 +135,4 @@ package:storybook:tags:acdh:
     DOCKER_RELEASE_IMAGE: ${CI_REGISTRY_IMAGE}/storybook:release
     DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/storybook:$CI_COMMIT_TAG
   rules:
-    - if: '$CI_COMMIT_BRANCH == "main" && $CI_COMMIT_TAG'
+    - if: '$CI_COMMIT_TAG != null'
