--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@stefanprobst/menu-button": "^0.5.4-c",
+    "@reach/menu-button": "^0.11.2",
     "@styled-system/css": "^5.0.23",
     "@styled-system/variant": "^5.1.2",
     "detab": "^2.0.2",
