--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prism-react-renderer": "^1.0.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.1",
     "react-scripts": "^3.3.0",
