chore: test if oeaw smtp server works

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,5 @@
+### BUILDTIME CONFIG ##########################################################
+
 ### used for creating oauth2 links
 ### frontend base url, defaults to http://localhost:3000
 # NEXT_PUBLIC_SSHOC_BASE_URL=https://sshoc-marketplace.acdh-dev.oeaw.ac.at
@@ -21,3 +23,10 @@ GITLAB_REPOSITORY=sshoc/sshoc-marketplace-frontend
 ### Matomo analytics
 # NEXT_PUBLIC_MATOMO_BASE_URL=
 # NEXT_PUBLIC_MATOMO_SITE_ID=
+
+### RUNTIME CONFIG ############################################################
+
+### Email for contact form submissions
+# SMTP_SERVER=
+# SMTP_PORT=
+# SSHOC_CONTACT_EMAIL=
