--- a/package.json
+++ b/package.json
@@ -28,28 +28,22 @@
     "@headlessui/react": "^0.2.0",
     "@hookform/devtools": "^2.2.1",
     "@hookform/resolvers": "^1.0.1",
-    "@mdx-js/loader": "^1.6.19",
-    "@next/mdx": "^10.0.1",
     "@reach/accordion": "^0.11.2",
     "@reach/combobox": "^0.11.2",
     "@reach/dialog": "^0.11.2",
     "@reach/disclosure": "^0.11.2",
     "@reach/visually-hidden": "^0.11.1",
-    "@stefanprobst/favicons": "^1.0.6",
     "@stefanprobst/next-app-layout": "^1.0.1",
     "@stefanprobst/next-error-boundary": "^1.0.5",
     "@stefanprobst/next-page-metadata": "^1.0.7",
-    "@stefanprobst/next-sitemap": "^1.0.4",
     "@stefanprobst/next-svg": "^1.0.4",
     "@stefanprobst/remark-excerpt": "^1.0.2",
     "clsx": "^1.1.1",
     "focus-visible": "^5.2.0",
-    "gray-matter": "^4.0.2",
     "jwt-decode": "^3.1.1",
     "next": "^10.0.3",
-    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
-    "openapi-ts-client": "git+https://github.com/stefanprobst/openapi-ts-client",
     "postcss-focus-visible": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -71,11 +65,14 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@mdx-js/loader": "^1.6.19",
     "@next/bundle-analyzer": "^10.0.3",
     "@next/eslint-plugin-next": "^10.0.3",
     "@stefanprobst/commitlint-config": "^1.0.1",
     "@stefanprobst/eslint-config-next": "^1.0.8",
     "@stefanprobst/eslint-config-next-component": "^1.0.5",
+    "@stefanprobst/favicons": "^1.0.6",
+    "@stefanprobst/next-sitemap": "^1.0.4",
     "@stefanprobst/prettier-config": "^1.0.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
@@ -85,6 +82,7 @@
     "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
+    "@types/nodemailer": "^6.4.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.56",
     "@types/react-google-recaptcha": "^2.1.0",
@@ -103,11 +101,14 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^3.10.0",
+    "gray-matter": "^4.0.2",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "msw": "^0.21.3",
     "netlify-cms-proxy-server": "^1.3.6",
+    "node-fetch": "^2.6.1",
+    "openapi-ts-client": "git+https://github.com/stefanprobst/openapi-ts-client",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
