chore: use official email for contact form submissions

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
 SMTP_SERVER=smtp.oeaw.ac.at
 SMTP_PORT=25
-# sshopenmarketplace@sshopencloud.eu
-SSHOC_CONTACT_EMAIL=stefan.probst@oeaw.ac.at
+SSHOC_CONTACT_EMAIL=sshopenmarketplace@sshopencloud.eu
