fix: better markdown typography

--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "@stefanprobst/next-page-metadata": "^1.0.7",
     "@stefanprobst/next-svg": "^1.0.4",
     "@stefanprobst/remark-excerpt": "^1.0.2",
+    "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.1.0",
     "clsx": "^1.1.1",
     "focus-visible": "^5.2.0",
     "jwt-decode": "^3.1.1",
     "next": "^10.0.3",
     "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
+    "postcss": "^8.2.1",
     "postcss-focus-visible": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -58,7 +61,7 @@
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.0",
     "strip-markdown": "^4.0.0",
-    "tailwindcss": "^1.9.6",
+    "tailwindcss": "^2.0.2",
     "unified": "^9.2.0",
     "yup": "^0.29.3"
   },
