--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -49,9 +49,9 @@ collections:
           - name: body
             label: Text
             widget: markdown
-      - name: team
-        label: Team page
-        file: content/pages/team.mdx
+      - name: service
+        label: About the Service page
+        file: content/pages/service.mdx
         format: frontmatter
         fields:
           - name: title
@@ -59,9 +59,9 @@ collections:
           - name: body
             label: Text
             widget: markdown
-      - name: website
-        label: Website page
-        file: content/pages/website.mdx
+      - name: team
+        label: About the Team page
+        file: content/pages/team.mdx
         format: frontmatter
         fields:
           - name: title
