chore: add new about page [skip ci]

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -60,6 +60,16 @@ collections:
           - name: body
             label: Text
             widget: markdown
+      - name: implementation
+        label: About the Technical Stuff page
+        file: content/pages/implementation.mdx
+        format: frontmatter
+        fields:
+          - name: title
+            label: Title
+          - name: body
+            label: Text
+            widget: markdown
       - name: team
         label: About the Team page
         file: content/pages/team.mdx
