fix: fix quotes, code blocks, page title

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -61,7 +61,7 @@ collections:
             label: Text
             widget: markdown
       - name: implementation
-        label: About the Technical Stuff page
+        label: About the Technical Aspects page
         file: content/pages/implementation.mdx
         format: frontmatter
         fields:
