--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,9 +75,9 @@ package:frontend:tags:acdh:
     DOCKER_CURRENT_IMAGE: ${CI_REGISTRY_IMAGE}/frontend:$CI_COMMIT_TAG
     GITLAB_BASE_URL: https://gitlab.gwdg.de
     GITLAB_REPOSITORY: sshoc/sshoc-marketplace-frontend
-    SSHOC_OPENAPI_DOCUMENT_URL: https://sshoc-marketplace-api.acdh.oeaw.ac.at/v3/api-docs
-    NEXT_PUBLIC_SSHOC_BASE_URL: https://sshoc-marketplace.acdh.oeaw.ac.at
-    NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh.oeaw.ac.at
+    SSHOC_OPENAPI_DOCUMENT_URL: https://marketplace-api.sshopencloud.eu/v3/api-docs
+    NEXT_PUBLIC_SSHOC_BASE_URL: https://marketplace.sshopencloud.eu
+    NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
     # NEXT_PUBLIC_RECAPTCHA_SITE_KEY:
     NEXT_PUBLIC_MATOMO_BASE_URL: https://matomo.acdh.oeaw.ac.at/
     NEXT_PUBLIC_MATOMO_SITE_ID: 179
