Change for AutoDevOps.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "license": "Apache-2.0",
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.22.x"
+  },
   "scripts": {
     "analyze": "cross-env ANALYZE=true yarn build",
     "build": "next build",
