--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: container/Dockerfile
       args:
         - GITLAB_BASE_URL
         - GITLAB_REPOSITORY
