--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,30 +1,12 @@
-FROM node:14-alpine
+FROM gliderlabs/herokuish as builder
+COPY . /tmp/app
+ARG BUILDPACK_URL
+ENV USER=herokuishuser
+RUN /bin/herokuish buildpack build
 
-WORKDIR /usr/src/app
-
-# git is needed for openapi-ts-client
-RUN apk update && apk upgrade && apk add --no-cache git
-
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile --quiet
-
-COPY . .
-ARG NEXT_TELEMETRY_DISABLED=1
-ARG GITLAB_BASE_URL
-ARG GITLAB_REPOSITORY
-ARG GITLAB_REPOSITORY_BRANCH
-ARG GITLAB_ACCESS_TOKEN
-ARG SSHOC_OPENAPI_DOCUMENT_URL
-ARG NEXT_PUBLIC_SSHOC_BASE_URL
-ARG NEXT_PUBLIC_SSHOC_API_BASE_URL
-ARG NEXT_PUBLIC_RECAPTCHA_SITE_KEY
-ARG NEXT_PUBLIC_MATOMO_BASE_URL
-ARG NEXT_PUBLIC_MATOMO_SITE_ID
-RUN yarn build
-
-EXPOSE 3000
-
-USER node
-
-# run docker with --init flag to handle SIGTERM/SIGKILL
-CMD ["yarn", "start"]
+FROM gliderlabs/herokuish
+COPY --chown=herokuishuser:herokuishuser --from=builder /app /app
+ENV PORT=5000
+ENV USER=herokuishuser
+EXPOSE 5000
+CMD ["/bin/herokuish", "procfile", "start", "web"]
