--- a/package.json
+++ b/package.json
@@ -67,13 +67,13 @@
     "strip-markdown": "^4.0.0",
     "tailwindcss": "^2.0.2",
     "unified": "^9.2.0",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "@next/bundle-analyzer": "^10.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@mdx-js/loader": "^1.6.19",
-    "@next/bundle-analyzer": "^10.0.3",
     "@next/eslint-plugin-next": "^10.0.3",
     "@stefanprobst/commitlint-config": "^1.0.1",
     "@stefanprobst/eslint-config-next": "^1.0.8",
