--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
     "@next/bundle-analyzer": "^10.0.7",
     "@next/eslint-plugin-next": "^10.0.7",
     "@stefanprobst/commitlint-config": "^1.0.1",
-    "@stefanprobst/eslint-config-next": "^1.0.8",
-    "@stefanprobst/eslint-config-next-component": "^1.0.5",
+    "@stefanprobst/eslint-config-next": "^1.0.9",
+    "@stefanprobst/eslint-config-next-component": "^1.0.9",
     "@stefanprobst/favicons": "^1.0.6",
     "@stefanprobst/next-sitemap": "^1.0.4",
-    "@stefanprobst/prettier-config": "^1.0.0",
+    "@stefanprobst/prettier-config": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
@@ -140,6 +140,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^3.10.0",
     "gray-matter": "^4.0.2",
     "husky": "^4.3.0",
@@ -189,5 +190,6 @@
   "lint-staged": {
     "*.(js|jsx|ts|tsx)": "eslint --cache --fix",
     "*.(css|json|md|mdx)": "prettier --write"
-  }
+  },
+  "prettier": "@stefanprobst/prettier-config"
 }
