--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "focus-visible": "^5.2.0",
     "highlight-words-core": "^1.2.2",
     "jwt-decode": "^3.1.1",
+    "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "next": "^10.0.7",
     "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
@@ -119,6 +121,8 @@
     "@types/highlight-words-core": "^1.2.0",
     "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^3.1.0",
+    "@types/lodash.get": "^4.4.6",
+    "@types/lodash.set": "^4.3.6",
     "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.14.6",
     "@types/node-fetch": "^2.5.7",
