--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,7 @@ package:frontend:main:acdh:
     SSHOC_OPENAPI_DOCUMENT_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at/v3/api-docs
     NEXT_PUBLIC_SSHOC_BASE_URL: https://sshoc-marketplace.acdh-dev.oeaw.ac.at
     NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
+    NEXT_PUBLIC_MATOMO_SITE_ID: 190
     # NEXT_PUBLIC_RECAPTCHA_SITE_KEY:
   rules:
     - if: '$CI_COMMIT_BRANCH == "main"'
