build: hello autodevops

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,9 @@
-SMTP_SERVER=smtp.oeaw.ac.at
-SMTP_PORT=25
-SSHOC_CONTACT_EMAIL=sshopenmarketplace@sshopencloud.eu
+# stage instance
+GITLAB_BASE_URL=https://gitlab.gwdg.de
+GITLAB_REPOSITORY=sshoc/sshoc-marketplace-frontend
+GITLAB_REPOSITORY_BRANCH=stage
+NEXT_PUBLIC_SSHOC_BASE_URL=hhttps://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at
+NEXT_PUBLIC_SSHOC_API_BASE_URL=https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at
+SSHOC_OPENAPI_DOCUMENT_URL=https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at/v3/api-docs
+NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
+NEXT_PUBLIC_MATOMO_SITE_ID=198
