build: trigger ci

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# stage instance
+# environment variables for stage instance
 GITLAB_BASE_URL=https://gitlab.gwdg.de
 GITLAB_REPOSITORY=sshoc/sshoc-marketplace-frontend
 GITLAB_REPOSITORY_BRANCH=stage
