--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@stefanprobst/remark-excerpt": "^1.0.2",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
+    "change-case": "^4.1.2",
     "clsx": "^1.1.1",
     "final-form": "^4.20.1",
     "final-form-arrays": "^3.0.2",
