--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     "vfile-matter": "^3.0.0"
   },
   "engines": {
-    "node": "14.x",
+    "node": ">=14.17",
     "yarn": "1.x"
   },
   "babel": {
