--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,11 @@
-# environment variables for develop instance
 GITLAB_BASE_URL=https://gitlab.gwdg.de
 GITLAB_REPOSITORY=sshoc/sshoc-marketplace-frontend
 GITLAB_REPOSITORY_BRANCH=develop
-NEXT_PUBLIC_SSHOC_BASE_URL=https://sshoc-marketplace.acdh-dev.oeaw.ac.at
-NEXT_PUBLIC_SSHOC_API_BASE_URL=https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
-SSHOC_OPENAPI_DOCUMENT_URL=https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at/v3/api-docs
+NEXT_PUBLIC_SSHOC_BASE_URL=https://marketplace.sshopencloud.eu
+NEXT_PUBLIC_SSHOC_API_BASE_URL=https://marketplace-api.sshopencloud.eu
+SSHOC_OPENAPI_DOCUMENT_URL=https://marketplace-api.sshopencloud.eu/v3/api-docs
 NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
-NEXT_PUBLIC_MATOMO_SITE_ID=190
+NEXT_PUBLIC_MATOMO_SITE_ID=179
 
 SMTP_SERVER=smtp.oeaw.ac.at
 SMTP_PORT=25
