--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:coverage": "yarn test --coverage"
   },
   "dependencies": {
-    "@headlessui/react": "0.2.0",
+    "@headlessui/react": "^1.4.2",
     "@mdx-js/loader": "^1.6.19",
     "@next/bundle-analyzer": "^10.0.7",
     "@reach/accordion": "^0.11.2",
@@ -71,8 +71,8 @@
     "@stefanprobst/next-page-metadata": "^1.0.7",
     "@stefanprobst/next-svg": "^1.0.4",
     "@stefanprobst/remark-excerpt": "^1.0.2",
-    "@tailwindcss/typography": "^0.3.1",
-    "autoprefixer": "^10.1.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
     "final-form": "^4.20.1",
@@ -88,7 +88,7 @@
     "next-plugin-preval": "^1.2.1",
     "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.5",
     "postcss-focus-visible": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -103,7 +103,7 @@
     "remark-rehype": "^8.0.0",
     "remark-stringify": "^9.0.0",
     "strip-markdown": "^4.0.0",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "^3.0.13",
     "unified": "^9.2.0",
     "yup": "^0.29.3"
   },
@@ -155,6 +155,7 @@
     "msw": "^0.21.3",
     "netlify-cms-proxy-server": "^1.3.6",
     "node-fetch": "^2.6.1",
+    "postcss-custom-media": "^8.0.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
