--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-query": "^3.18.1",
     "react-toastify": "^6.1.0",
     "rehype-stringify": "^8.0.0",
+    "rehype-raw": "^5.0.0",
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
