--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@stefanprobst/next-page-metadata": "^1.0.7",
     "@stefanprobst/next-svg": "^1.0.4",
     "@stefanprobst/remark-excerpt": "^1.0.2",
+    "@stefanprobst/remark-extract-toc": "^2.1.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
@@ -97,11 +98,12 @@
     "react-google-recaptcha": "^2.1.0",
     "react-query": "^3.18.1",
     "react-toastify": "^6.1.0",
-    "rehype-stringify": "^8.0.0",
     "rehype-raw": "^5.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark-gfm": "^1.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
+    "remark-slug": "^6.0.0",
     "remark-stringify": "^9.0.0",
     "strip-markdown": "^4.0.0",
     "tailwindcss": "^3.0.13",
