--- a/package.json
+++ b/package.json
@@ -32,40 +32,40 @@
     "@reach/dialog": "^0.11.2",
     "@reach/disclosure": "^0.11.2",
     "@reach/visually-hidden": "^0.11.1",
-    "@react-aria/breadcrumbs": "^3.1.2",
-    "@react-aria/button": "^3.3.1",
-    "@react-aria/checkbox": "^3.2.1",
-    "@react-aria/combobox": "^3.0.0-alpha.1",
-    "@react-aria/dialog": "^3.1.2",
-    "@react-aria/focus": "^3.2.3",
-    "@react-aria/i18n": "^3.3.0",
-    "@react-aria/interactions": "^3.3.3",
-    "@react-aria/link": "^3.1.2",
-    "@react-aria/listbox": "^3.2.4",
-    "@react-aria/menu": "^3.1.4",
-    "@react-aria/numberfield": "^3.0.0-alpha.0",
-    "@react-aria/overlays": "^3.6.1",
-    "@react-aria/progress": "^3.1.1",
-    "@react-aria/searchfield": "^3.1.1",
-    "@react-aria/select": "^3.3.0",
-    "@react-aria/separator": "^3.1.1",
-    "@react-aria/ssr": "^3.0.1",
-    "@react-aria/textfield": "^3.2.2",
-    "@react-aria/tooltip": "^3.1.1",
-    "@react-aria/utils": "^3.6.0",
-    "@react-aria/visually-hidden": "^3.2.1",
-    "@react-stately/checkbox": "^3.0.1",
-    "@react-stately/collections": "^3.3.0",
-    "@react-stately/combobox": "^3.0.0-alpha.1",
-    "@react-stately/data": "^3.2.0",
-    "@react-stately/menu": "^3.2.1",
-    "@react-stately/numberfield": "^3.0.0-alpha.0",
-    "@react-stately/overlays": "^3.1.1",
-    "@react-stately/searchfield": "^3.1.1",
-    "@react-stately/select": "^3.1.1",
-    "@react-stately/toggle": "^3.2.1",
-    "@react-stately/tooltip": "^3.0.2",
-    "@react-stately/tree": "^3.1.2",
+    "@react-aria/breadcrumbs": "^3.1.5",
+    "@react-aria/button": "^3.3.4",
+    "@react-aria/checkbox": "^3.2.3",
+    "@react-aria/combobox": "^3.2.1",
+    "@react-aria/dialog": "^3.1.4",
+    "@react-aria/focus": "^3.5.0",
+    "@react-aria/i18n": "^3.3.4",
+    "@react-aria/interactions": "^3.7.0",
+    "@react-aria/link": "^3.2.0",
+    "@react-aria/listbox": "^3.4.0",
+    "@react-aria/menu": "^3.3.0",
+    "@react-aria/numberfield": "^3.1.1",
+    "@react-aria/overlays": "^3.7.3",
+    "@react-aria/progress": "^3.1.3",
+    "@react-aria/searchfield": "^3.2.2",
+    "@react-aria/select": "^3.6.0",
+    "@react-aria/separator": "^3.1.3",
+    "@react-aria/ssr": "^3.1.0",
+    "@react-aria/textfield": "^3.5.0",
+    "@react-aria/tooltip": "^3.1.3",
+    "@react-aria/utils": "^3.11.0",
+    "@react-aria/visually-hidden": "^3.2.3",
+    "@react-stately/checkbox": "^3.0.3",
+    "@react-stately/collections": "^3.3.4",
+    "@react-stately/combobox": "^3.0.1",
+    "@react-stately/data": "^3.4.3",
+    "@react-stately/menu": "^3.2.3",
+    "@react-stately/numberfield": "^3.0.2",
+    "@react-stately/overlays": "^3.1.3",
+    "@react-stately/searchfield": "^3.1.3",
+    "@react-stately/select": "^3.1.3",
+    "@react-stately/toggle": "^3.2.3",
+    "@react-stately/tooltip": "^3.0.5",
+    "@react-stately/tree": "^3.2.0",
     "@stefanprobst/next-app-layout": "^1.0.1",
     "@stefanprobst/next-error-boundary": "^1.0.7",
     "@stefanprobst/next-page-metadata": "^1.0.7",
