--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "rehype-raw": "^5.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-gfm": "^1.0.0",
+    "remark-footnotes": "3.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.0.0",
     "remark-slug": "^6.0.0",
